# SDDP-PET

./: .gitignore
backend/: CREWAI_VERSION_RATIONALE.md  FASTAPI_VERSION_RATIONALE.md  README.md  pyproject.toml  requirements.lock.txt
backend/scripts/: deepseek-env.sh  deepseek-env.sh.example  kg_evaluate.py  verify_crewai_version.sh
backend/sddp/: __init__.py
backend/sddp/adaptation/: README.md  crewai_adapter.py  flow_definition.py  mock_adapter.py
backend/sddp/cli/: feedback_adapter.py  flow_state.py  main.py
backend/sddp/engine/: agents.py  convergence.py  cost_meter.py  kg_tools.py
backend/sddp/engine/backstories/: __init__.py  architect.py  code_asset_manager.py  executor.py  orchestrator.py  requirement_officer.py
backend/sddp/ipc/: confrontation_runner.py  feedback_adapter.py  heartbeat.py  schemas.py  server.py
backend/sddp/kg/: derived_views.py  evaluate.py  graph_loader.py  graph_schema.py  manifest.py  query_api.py  scan.py  scip_indexer.py  tree_sitter_fallback.py
backend/sddp/observability/: metrics_recorder.py
backend/sddp/safe_agent/: wrapper.py
backend/sddp/schemas/: __init__.py  architecture_research.py  delta_design.py  delta_spec.py  proposal.py  renderer.py
backend/sddp/security/: prefilter.py
backend/tests/adaptation/: test_crewai_loop.py  test_mock_adapter.py
backend/tests/cli/: test_resume.py  test_run_command.py
backend/tests/e2e/: test_dev_phase_0_demo.py
backend/tests/engine/: test_5_roles_kickoff.py  test_confrontation_go.py  test_confrontation_real.py  test_confrontation_smoke.py  test_convergence.py  test_cost_meter.py  test_critic_llm_real.py  test_json_markdown_roundtrip.py  test_output_schema_enforcement.py
backend/tests/ipc/: test_confrontation_runner.py  test_dp2_additive.py  test_heartbeat.py  test_schemas.py  test_server.py  test_start_flow_confrontation.py
backend/tests/kg/: golden.json  test_queries.py  test_scan.py
backend/tests/observability/: test_metrics_recorder.py
backend/tests/safe_agent/: test_state_errors.py  test_timeout_retry.py
backend/tests/security/: test_no_plaintext_key.py  test_otel_disabled.py  test_prefilter.py
(+130 files in other folders)
